# recursive-self-improvement

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
backups/gsm8k_test002_cycles1to5_backup/: cycles.jsonl
docs/: rsi_approaches_analysis.md  rsi_architecture.md  test_report_001_gsm8k_small.md  test_report_002_gsm8k_full.md  testing_roadmap.md
src/evaluator/: __init__.py  arc.py  base.py  gsm8k.py
src/meta/: __init__.py  analyzer.py  loop.py  mutator.py  selector.py
src/models/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  router.py
src/programs/: __init__.py  interface.py
src/programs/baselines/: __init__.py  chain_of_thought.py  decompose_solve.py  direct.py  ensemble_vote.py  generate_verify.py
src/utils/: __init__.py  cost_tracker.py  sandbox.py
